# Flappy-GL

./: CMakeLists.txt  README.md  main.cpp
control/: control.cpp  control.h
player/: player.cpp  player.h
text/: textMain.txt
